test/2/type/union-arg-to-prim-dom.ploy
f = fn Int%Void;

main = {
  u:(Int|Str) = 0
  f.u
}
